修复迭代2终审报告全部问题（7个P0 + 12个P1 + 8个P2）
P0修复：
- ProjectionSpec.findPage() DISTINCT 条件化，修复count与数据查询语义不一致
- MergeSpec H2重试回退不再覆盖部分更新列
- EncryptConverter盐值文件写入后验证+mkdirs失败中止
- EncryptConverter多密钥格式使用正则验证，消除解析歧义
- MergeSpec.isJtaTransactionActive()改用纯反射，解除Hibernate编译时依赖
- CodeEnumType.nullSafeSet()根据字段类型选择正确的setter
- MergeSpec.execute()使用局部变量快照，消除并发安全隐患

P1修复：
- SoftDeleteJpaRepository新增withAutoFilterOverride辅助方法，防止ThreadLocal泄漏
- CodeEnumType缓存改用弱引用键，防止类加载器泄漏
- MergeSpec/SoftDeleteHelper缓存大小检查改用采样策略
- EntityClassResolver/ProjectionSpec反射结果缓存
- AbstractBulkOperationSpec.eqIgnoreCase/neIgnoreCase添加null校验
- AuditEntityListener使用哨兵值防止getUserProvider()失败后无限重入
- EntityCodeGenerator tableName安全校验
- MaskSerializer短地址脱敏

P2修复：
- SqlSlowQueryInterceptor缓存部分驱逐（25%）
- CachedQueryResult预计算过期时间
- MyJpaPlusProperties交叉字段校验
- 新增20+ProjectionSpec测试提升覆盖率

构建验证：884测试全通过，SpotBugs 0问题，JaCoCo覆盖率达标